Mon Sep 27 12:54:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/xerces.mpb:
          New base project which can be used when xerces is used

Sun Sep 26 18:58:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_limits.h:
          Removed setting of MAXSYMLINKS when not set, this is not the way
          to fix compile problems in OS_NS_stdlib.cpp, set ACE_LACKS_SYMLINKS
          instead if symbolic links are not supported

        * ace/config-openvms.h:
          Added ACE_LACKS_SYMLINKS, removed MAXSYMLINKS

        * ace/config-vxworks.h:
          Added ACE_LACKS_SYMLINKS, ACE_LACKS_REALPATH and
          ACE_HAS_NONCONST_READV

Sun Sep 26 21:06:53 2004  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdlib.h:
          (mktemp, mkstemp) Changed protototype (parameter name) to match
          implementation.

        * ace/OS_NS_stdlib.cpp: (realpath)
          Added check for new macro ACE_LACKS_SYMLINKS to leave out symbolic
          links related code. This fixes compile errors on platforms which
          do not support symbolic links. Fixes bug 1900.

        * ace/README:
          Added ACE_LACKS_SYMLINKS.

Sun Sep 26 14:13:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ICMP_Socket.cpp:
        * ace/Ping_Socket.cpp:
          Fixed incorrect ACE_TRACE usage

Sun Sep 26 14:10:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/imr_activator.mpb:
        * bin/MakeProjectCreator/config/imr_locator.mpb:
          Added missing Id tag

Sun Sep 26 10:10:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ICMP_Socket.h:
        * ace/Ping_Socket.h:
          Added missing /**/ before include of pre/post.h to fix fuzz
          errors

Sun Sep 26 10:07:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE_crc32.cpp:
        * ace/ACE_crc_ccitt.cpp: